--- a/templates/create-account---.html
+++ b/templates/create-account---.html
@@ -37,9 +37,9 @@
                     <li>
                         <button id="createAccount" type="submit">{{ nav_account.createAccount.1 }}</button>
                     </li>
-                    <li style="text-align: center;">
+                    <!-- <li style="text-align: center;">
                         --or--
-                    </li>
+                    </li> -->
                     <li style="text-align: center;">
                         <a href="{{ nav_account.login.0 }}" class="btn">{{ nav_account.login.1 }}</a>
                     </li>
