--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,24 +1,23 @@
 <footer>
-    <div class="container flex-container">
-        <div style="margin-right: 3%;">
-            <h3><b>Brand</b></h3>
-            <ul>
-                <li><a href="">Trenovker</a></li>
-                <li><a href="">ME AND MR. LEO</a></li>
-            </ul>
+    <div class="container">
+        <div class="flex-container">
+            <div>
+                <h3><b>Brand</b></h3>
+                <ul>
+                    <li><a href="">Trenovker</a></li>
+                    <li><a href="">ME AND MR. LEO</a></li>
+                </ul>
+            </div>
+            <div>
+                <h3><b>Contact Us</b></h3>
+                <ul>
+                    <li><a href="">me.and.mr.leo.official@gmail.com</a></li>
+                    <li><a href="">me.and.mr.leo.promote@gmail.com</a></li>
+                </ul>
+            </div>
         </div>
-        <div style="margin-right: 3%;">
-            <h3><b>Contact Us</b></h3>
-            <ul>
-                <li><a href="">me.and.mr.leo.official@gmail.com</a></li>
-                <li><a href="">me.and.mr.leo.pronote@gmail.com</a></li>
-            </ul>
+        <div>
+            Copyright © 2020-{{ timezone.year }} 3.9Kr Inc. All rights reserved. 
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div class="container padding-b">
-        Copyright © 2020-{{ timezone.year }} 3.9Kr Inc. All rights reserved. 
     </div>
 </footer>
