--- a/templates/nav.html
+++ b/templates/nav.html
@@ -16,11 +16,11 @@
             <!-- test client & body width/height -->
             <!-- <div id="hei" style="line-height: 55px;"></div> -->
         </div>
-        <div class="account">
+        <div class="nav-account">
             {% if user_status %}
             <a href="{{ nav_account.cart.0 }}" class="bag" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')"></a>
-            <div id="account-list" class="account-list" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')">
-                <div class="account-online">
+            <div id="nav-account-list" class="nav-account-list" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')">
+                <div class="nav-account-online">
                     <span>Hi, {{ user_name }}.</span>
                     <div>
                         <a href="{{ nav_account.account.0 }}">Account</a>
@@ -31,11 +31,12 @@
                 </div>
             </div>
             {% else %}
+            <!-- <a href="{{ nav_account.cart.0 }}" class="bag" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')"></a> -->
             <a href="{{ nav_account.cart.0 }}" class="bag" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')"></a>
-            <div id="account-list" class="account-list" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')">
+            <div id="nav-account-list" class="nav-account-list" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')">
                 <div>
-                    <a class="login-btn" href="{{ nav_account.login.0 }}">Login</a>
-                    <a class="createaccount-btn" href="{{ nav_account.createAccount.0 }}">Create Account</a>
+                    <a class="login-btn" href="{{ nav_account.login.0 }}">Log in</a>
+                    <a class="createaccount-btn" href="{{ nav_account.createAccount.0 }}">Sign up</a>
                     <!-- <div>List</div> -->
                 </div>
             </div>
@@ -49,32 +50,24 @@
             <li><a class="material-symbols-outlined size-48" onclick="mobNavCol('nav')">menu</a></li>
             <li><a class="brand-mini" href="{{ nav_index.index }}" id="width-mini"></a></li>
             <li><a class="bag" onclick="mobNavCol('account')"></a></li>
-
-            <!-- {% if user_status %}
-            <li>
-                <a href="{{ nav_account.cart.0 }}" class="bag"></a>
-            </li>
-            {% else %}
-            <li><a href="{{ nav_account.login.0 }}" class="bag" onmouseenter="display('over')" onmouseleave="display('out')"></a></li>
-            {% endif %} -->
         </ul>
         <div id="nav-app-mini-list" class="nav-app-list">
             <a onclick="mobNavCol('nav')">X</a>
             <a href="{{ nav_nav.Brand }}">Brand</a>
             <a href="{{ nav_nav.Products }}">Products</a>
         </div>
-        <div id="account-mini-list" class="account-list">
+        <div id="nav-account-mini-list" class="nav-account-list">
             {% if user_status %}
             <span>Hi, {{ user_name }}.</span>
-            <div class="account-online">
+            <div class="nav-account-online">
                 <a href="{{ nav_account.account.0 }}">Account</a>
                 <!-- <a href="{{ nav_account.account.0 }}">Bag</a> -->
                 <!-- <a href="{{ nav_account.account.0 }}">Orders</a> -->
                 <a href="logout">Sign out</a>
             </div>
             {% else %}
-            <a href="{{ nav_account.login.0 }}">Login</a>
-            <a href="{{ nav_account.createAccount.0 }}">Create Account</a>
+            <a href="{{ nav_account.login.0 }}">Log in</a>
+            <a href="{{ nav_account.createAccount.0 }}">Sign up</a>
             <!-- <div>List</div> -->
             {% endif %}
         </div>
